--- a/public/template/webconsole.html
+++ b/public/template/webconsole.html
@@ -11,20 +11,9 @@
                     </div>
                     <div class="clear"></div>
                     <div class="card-content">
-                        <table>
-                            <tr>
-                                <td width="33%">Customer Name:</td>
-                                <td>{{customer.customer_name}}</td>
-                            </tr>
-                            <tr>
-                                <td>CSN:</td>
-                                <td>{{customer.csn}}</td>
-                            </tr>
-                            <tr>
-                                <td width="33%">Master Account ID:</td>
-                                <td>{{customer.master_acc_id}}</td>
-                            </tr>
-                        </table>
+                        Customer Name: {{customer.customer_name}}<br/>
+                        CSN: {{customer.csn}}<br/>
+                        Master Account ID {{customer.master_acc_id}}<br/>
                         <div class="vlid-select">CAEDUB23</div><!--
                         --><div class="wrapper-demo"><!--
                             --><div id="dd" class="wrapper-dropdown-1" tabindex="1"><!--
@@ -87,17 +76,16 @@
                     <h4>Hardware Information</h4>
                     <table class="interface-table">
                         <tr class="belieze-hole">
-                            <th>VHID</th>
+                            <th>LCF Flag</th>
                             <th>Model</th>
-                            <th>Vendor</th>
+                            <th>Serial #</th>
                             <th>Type</th>
                         </tr>
-                        <!--<tr ng-repeat="hardware in hardware" ng-class-even="'even'">-->
-                        <tr>
-                            <td>{{hardware.vhid}}</td>
+                        <tr ng-repeat="hardware in hardware" ng-class-even="'even'">
+                            <td>{{hardware.lcf_flag}}</td>
                             <td>{{hardware.model}}</td>
-                            <td>{{hardware.vendor}}</td>
-                            <td>{{hardware.equipment_type}}</td>
+                            <td>{{hardware.serial}}</td>
+                            <td>{{hardware.type}}</td>
                         </tr>
                     </table>
                 </div>
@@ -146,7 +134,7 @@
                             <td>{{oob.vhid}}</td>
                             <td>{{oob.number}}</td>
                             <td>{{oob.comments}}</td>
-                            <td>{{oob.lastdatetested}}</td>
+                            <td>{{oob.last_status}}</td>
                         </tr>
                     </table>
                 </div>
@@ -240,49 +228,3 @@
         </div>
     </div>
 </div>
-
-<script type="text/javascript">
-function DropDown(el) {
-    this.dd = el;
-    this.placeholder = this.dd.children('span');
-    this.opts = this.dd.find('ul.dropdown > li');
-    this.val = '';
-    this.index = -1;
-    this.initEvents();
-}
-
-DropDown.prototype = {
-    initEvents : function() {
-        var obj = this;
-
-        obj.dd.on('click', function(event){
-            $(this).toggleClass('active');
-            return false;
-        });
-
-        obj.opts.on('click',function(){
-            var opt = $(this);
-            obj.val = opt.text();
-            obj.index = opt.index();
-            obj.placeholder.text(obj.val);
-        });
-    },
-    getValue : function() {
-        return this.val;
-    },
-    getIndex : function() {
-        return this.index;
-    }
-}
-
-$(function() {
-
-    var dd = new DropDown( $('#dd') );
-
-    $(document).click(function() {
-        // all dropdowns
-        $('.wrapper-dropdown-1').removeClass('active');
-    });
-
-});
-</script>
