added notes for web console implementation

--- a/public/template/webconsole.html
+++ b/public/template/webconsole.html
@@ -113,6 +113,14 @@
             </div>
         </div>
 
+        <div class="Grid Grid--gutters Grid--flexCells u-nested-full">
+            <div class="Grid-cell ">
+                <div class="card-flex">
+                    <h4>Management Path Information</h4>
+                </div>
+            </div>
+        </div>
+
         
     <!-- <div class="Grid-cell u-1of4">
         <div class="Grid-full Grid--gutters u-nested-full">
