Changed Search Box UI
adjusted width of search panel

--- a/public/template/pa.html
+++ b/public/template/pa.html
@@ -7,7 +7,7 @@
                 <div class="card-flex">
                     <div class="card-header">
                         <h4>Customer and Site Information</h4>
-                        <div class="card-expand"></div>
+                        <!-- <div class="card-expand"></div> -->
                         <!-- <img src="img/expanding2.svg" class="card-handle" /> -->
                     </div>
                     <div class="clear"></div>
