--- a/public/css/main.css
+++ b/public/css/main.css
@@ -653,7 +653,8 @@ body {
 .filter-box__text-input {
     border: 1px solid #95a5a6;
     padding: 6px;
-    font-size: 0.875em
+    font-size: 0.875em;
+    width: 100%;
 }
 
 .filter-box label {
@@ -686,14 +687,14 @@ body {
 .panel-container {
     background-color: #fff;
     position: fixed;
-    left: -300px;
+    left: -360px;
     top: 0;
     z-index: 4;
     height: 100%;
     padding-top: 115px;
     padding-left: 8px;
     padding-right: 6px;
-    width: 300px;
+    width: 360px;
     /*display: none;*/
     transition: 1s;
     box-shadow: 0px 1px 3px #222;
@@ -704,6 +705,14 @@ body {
     display: block;
     transition: 1s;
     left: 58px;
+}
+
+.search-container {
+    width: 45%;
+}
+
+.search-box {
+    width: 210px;
 }
 
 /* ==========================================================================
