--- a/public/css/main.css
+++ b/public/css/main.css
@@ -640,7 +640,7 @@ body {
    form classes
    ========================================================================== */
 .filter-box {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
     color: #838383;
 }
 
